tests/snapshots/ebook_golden_tests__check_scenario@kobo__OEBPS__Text__style.css.snap
---
source: tests/ebook_golden_tests.rs
expression: payload
---
@page {
margin: 0;
}
body {
display: block;
margin: 0;
padding: 0;
}
<EOF: newline>
